# lazycelery

./: .editorconfig  .gitignore  .mise.toml  .repomixignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  NEXT_STEPS_RELEASE.md  PACKAGE_MANAGERS_SETUP.md  README.md  RELEASE_SETUP.md  ROADMAP.md  cliff.toml  code-style-guide.md  deny.toml  install.ps1  install.sh  release.toml  repomix-output.txt  repomix-output.xml  repomix.config.json  rustfmt.toml
.cargo/: audit.toml
.githooks/: README.md  pre-commit
.github/: dependabot.yml  labeler.yml  mise-ci.toml
.github/workflows/: benchmarks.yml  ci.yml  dist.yml  docker.yml  pr-labeler.yml  release.yml  security-audit.yml  version-bump.yml
examples/: config.toml
packaging/: .gitignore  README.md  generate_packages.py
packaging/aur/: PKGBUILD  PKGBUILD-bin
packaging/chocolatey/: lazycelery.nuspec
packaging/chocolatey/tools/: chocolateyinstall.ps1
packaging/homebrew/: lazycelery.rb
packaging/scoop/: lazycelery.json
packaging/snap/: snapcraft.yaml
scripts/: install-mise.sh  validate-versions.py  validate-versions.sh
specs/: README.md  future-features.md  mvp.md  original-spec.md
src/: app.rs  config.rs  error.rs  lib.rs  main.rs  update.rs
src/app/: actions.rs  mod.rs  state.rs
src/broker/: amqp.rs  mod.rs  redis.rs
src/broker/amqp/: mod.rs
src/broker/redis/: connection.rs  facade.rs  mod.rs  operations.rs  pool.rs  protocol.rs
src/broker/redis/protocol/: mod.rs  queue_parser.rs  task_parser.rs  worker_parser.rs
src/broker/result_backend/: mod.rs  redis.rs
src/models/: mod.rs  queue.rs  task.rs  worker.rs
src/ui/: events.rs  layout.rs  mod.rs  modals.rs
src/ui/widgets/: base.rs  mod.rs  queues.rs  tasks.rs  workers.rs
src/utils/: formatting.rs
tests/: integration_test.rs  redis_test_utils.rs  test_app.rs  test_app_actions.rs  test_broker_utils.rs  test_complete_integration.rs  test_config.rs  test_error.rs  test_event_handling.rs  test_models.rs  test_redis_broker.rs  test_redis_broker_basic.rs  test_redis_broker_integration.rs  test_refactoring_summary.md  test_ui_base_widgets.rs  test_ui_layout.rs  test_ui_modals.rs  test_ui_widgets.rs  test_utils.rs  test_utils_formatting.rs
