[package]
name = "lazycelery"
version = "0.7.0"
edition = "2021"
authors = ["Francisco Guedes <francis@example.com>"]
description = "A terminal UI for monitoring and managing Celery workers and tasks, inspired by lazydocker/lazygit"
license = "MIT"
repository = "https://github.com/Fguedes90/lazycelery"
homepage = "https://github.com/Fguedes90/lazycelery"
documentation = "https://docs.rs/lazycelery"
readme = "README.md"
keywords = ["celery", "tui", "terminal", "monitoring", "redis"]
categories = ["command-line-utilities", "development-tools", "debugging"]
rust-version = "1.88.0"
exclude = [
    ".github/",
    "tests/",
    "benches/",
    "docs/",
    ".*",
    "*.md",
    "screenshots/",
    "MVP_DEVELOPMENT_PLAN.md",
]

[[bin]]
name = "lazycelery"
path = "src/main.rs"

[dependencies]
# TUI
ratatui = "0.26"
crossterm = "0.27"

# Async runtime
tokio = { version = "1.47", features = ["full"] }
async-trait = "0.1"

# Broker clients
redis = { version = "0.24", features = ["tokio-comp"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
base64 = "0.22"

# System directories
dirs = "5.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# CLI
clap = { version = "4.4", features = ["derive"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"

[dev-dependencies]
tempfile = "3.8"
