[package]
name = "lazycelery"
version = "0.7.2"
edition = "2021"
authors = ["Francisco Guedes <francis@example.com>"]
description = "A terminal UI for monitoring and managing Celery workers and tasks, inspired by lazydocker/lazygit"
license = "MIT"
repository = "https://github.com/Fguedes90/lazycelery"
homepage = "https://github.com/Fguedes90/lazycelery"
documentation = "https://docs.rs/lazycelery"
readme = "README.md"
keywords = ["celery", "tui", "terminal", "monitoring", "redis"]
categories = ["command-line-utilities", "development-tools", "debugging"]
rust-version = "1.88.0"
exclude = [
    ".github/",
    "tests/",
    "benches/",
    "docs/",
    ".*",
    "*.md",
    "screenshots/",
    "MVP_DEVELOPMENT_PLAN.md",
]

[[bin]]
name = "lazycelery"
path = "src/main.rs"

[dependencies]
# TUI
ratatui = "0.30"
crossterm = "0.27"

# Async runtime
tokio = { version = "1.47", features = ["full"] }
async-trait = "0.1"

# Broker clients
redis = { version = "0.25", features = ["tokio-comp"] }
lapin = "2.5"
futures-lite = "2.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
base64 = "0.22"

# System directories
dirs = "6.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# CLI
clap = { version = "4.4", features = ["derive"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
# HTTP client for update checking
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

[dev-dependencies]
tempfile = "3.8"


# Cargo-dist configuration for packaging
# See: https://cargo.distribution.axodotdev.cargo.cr/reference/config.html
[package.metadata.cargo-dist]
# Enable cargo-dist features
ci = { github = { enable = true } }
# Targets to build
targets = ["x86_64-unknown-linux-gnu", "aarch64-unknown-linux-gnu", "x86_64-apple-darwin", "aarch64-apple-darwin", "x86_64-pc-windows-msvc"]
# Installers to generate
installers = ["shell", "homebrew", "scoop"]
# Homebrew formula settings
homebrew = { enable = true }
# Scoop settings
scoop = { enable = true }
# AUR settings
aur = { enable = true }